src/objects/ADvendio__Media_Basket__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdPriceIdText__c</fullName>
        <label>AdPriceIdText</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__ContentIds__c</fullName>
        <label>Content Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__IsRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipName>Media_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__PricebookEntryIdText__c</fullName>
        <label>PricebookEntryIdText</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDateIds__c</fullName>
        <label>Publication Date Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__RebateInKindCommitmentCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If there is a Rebate in Kind Commitment Contition, the Campaign Item from the Basket will be created to spend the available amount of the Commitment Condition.</description>
        <inlineHelpText>Enter a Rebate in Kind Commitment Condition to spend the rebate.</inlineHelpText>
        <label>Commitment Condition</label>
        <referenceTo>ADvendio__CommitmentCondition__c</referenceTo>
        <relationshipLabel>Media Baskets</relationshipLabel>
        <relationshipName>MediaBaskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SpecialDiscount__c</fullName>
        <label>Special Discount</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Media_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Media Basket</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Media Basket No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Baskets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>